[package]
name = "vecmap"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

[profile.release]
debug = true

[dependencies]
dashmap = { version = "5.5.3", default-features = false, features = [] }
fastrand = "2"
generic_singleton = "0.5.0"
itertools = "0.12.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = { version = "1.4.0", default_features = false, features = ["std"] }
proptest-derive = "0.4.0"

[[bench]]
name = "criterion"
harness = false
